oith-styles/src/layout/chapter-layout.scss
@import './images.scss';

.ref-label {
  font-weight: 700;
}
body {
  overflow: hidden;

  .body {
    display: grid;
    justify-content: center;
    & > div {
      max-width: 1000px;
    }
  }
}
.chapter {
  // max-width: 70%;
  max-width: 55rem;
}
.white-space {
  height: calc(100vh - 48px);
}

@mixin chapterContent {
  justify-items: center;
  display: grid;
  grid-template-columns: 48px auto 48px;
  font-size: 1em;
  font-family: Palatino-Roman, PahoranldsLat-Roman, Palatino, NotoSansMyanmar,
    SaysetthaldsLao, serif;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.33em;
  text-align: left;
}

.chapter-loader {
  overflow-y: scroll;
  height: calc(100vh - 48px);
  // height: 100vh;
  chapter-content,
  .chapter-content {
    justify-items: center;
    display: grid;
    grid-template-columns: 48px auto 48px;
    font-size: 1em;
    font-family: Palatino-Roman, PahoranldsLat-Roman, Palatino, NotoSansMyanmar,
      SaysetthaldsLao, serif;
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.33em;
    text-align: left;

    a,
    [name='a'] {
      color: inherit;
      &.valid-href {
        color: #0000e0 !important;
        text-decoration: wavy;
        &:hover {
          color: #274472 !important;
        }
        margin: 0;
        padding: 0;
        border: 0;
        font-size: 100%;
        font: inherit;
        cursor: pointer;
        vertical-align: baseline;
      }
    }
    [name='div'] {
      display: block;
    }
    .chapter {
      width: 100%;
    }
    // img {
    //   width: 70%;
    // }
    #short_reference1,
    #reference1 {
      display: none;
    }

    &.classic-scriptures {
      .closing-block p {
        text-indent: 0;
      }
      header {
        padding-bottom: 1em;
      }
      .small-caps {
        font-variant: small-caps;
      }
      .uppercase {
        text-transform: uppercase;
      }
      .clarity-word {
        font-family: Palatino-Italic, 'Palatino Italic', PahoranldsLat-Italic,
          Palatino, NotoSansMyanmar, SaysetthaldsLao, serif;
        font-weight: 400;
        font-style: italic;
        font-stretch: normal;
      }
      .signature {
        font-variant: small-caps;
        padding-bottom: 0;
        text-indent: 0;
      }
      .verse-number {
        // font-size: 0.9em;
        font-weight: 700;
        font-style: normal;
        font-stretch: normal;
        .all {
          color: rgb(68, 114, 196);
          font-weight: 700;
        }
      }
      .body-block {
        header,
        [name='header'] {
          padding-bottom: 0;
          margin: 0;
          padding: 0;
          border: 0;
          font-size: 100%;
          font: inherit;
          vertical-align: baseline;
        }
        [id*='wide_ellipse'] {
          font-size: 1.25em;
          text-align: center;
          letter-spacing: 0.35em;
          padding-bottom: 0.5em;
        }
        p,
        [name='p'] {
          text-indent: 1.5em;
        }
        .verse {
          text-indent: 0;
          padding-bottom: 0.65em;
          margin-top: 0;
          margin-bottom: 0;
          &.highlight {
            padding-left: 5px;
            border-left: 2.5px solid #f68d2e !important;
          }
          &.context {
            padding-left: 5px;
            border-left: 2.5px solid #2ca1a5;
          }
        }
      }
      .intro {
        padding-top: 0.9em;
        padding-bottom: 1.25em;
      }
      .study_intro {
        font-family: Palatino-Italic, 'Palatino Italic', PahoranldsLat-Italic,
          Palatino, NotoSansMyanmar, SaysetthaldsLao, serif !important;
        font-weight: 400;
        font-style: italic;
        font-stretch: normal;
        padding-top: 0.9em;
        padding-bottom: 1.25em;
      }
      [id*='study_summary'],
      .study_summary {
        font-family: Palatino-Italic, 'Palatino Italic', PahoranldsLat-Italic,
          Palatino, NotoSansMyanmar, SaysetthaldsLao, serif;
        font-weight: 400;
        font-style: italic;
        font-stretch: normal;
        padding-bottom: 0;
        text-indent: 0;
        margin-top: -0.5em;
      }

      h1,
      [name='h1'] {
        font-weight: 400;
        font-style: normal;
        font-stretch: normal;
        text-transform: uppercase;
        letter-spacing: 0.1em;
        font-size: 1em;
        text-align: center;
        line-height: 1.25em;
        display: block;
        padding-right: 1.5em;
        padding-left: 1.5em;
        & > .dominant {
          padding-bottom: 0.35em;
          font-size: 1.75em;
          line-height: 1em;
          display: block;
          padding-top: 0.15em;
        }
        & > .subordinate {
          font-size: 0.88em;
          display: block;
          padding-top: 0.15em;
        }
      }
      [id*='subtitle'],
      .subtitle {
        font-size: 0.88em;
        letter-spacing: 0.1em;
        text-align: center;
        text-transform: uppercase;
        line-height: 1.33em;
        padding-bottom: 0;
      }
      [id*='title_number'],
      .title-number {
        padding-top: 1.4em;
        font-size: 1.1em;
        padding-bottom: 0.5em;
        text-align: center;
        display: block;
        text-transform: uppercase;
        letter-spacing: 0.1em;
      }
      .symbol {
        padding-left: 1.5em;
        display: block;
        list-style: none;
        & > li:before,
        & > [name='li'] {
          content: attr(data-marker);
          margin-left: -1.5em;
          float: left;
        }
      }
    }
  }
}
@mixin oithContent($navWidth, $notesWidth) {
  display: grid;

  grid-template-columns: 0 calc(100vw) 0;
  &.nav-off.off-notes {
    grid-template-columns: calc(100vw) !important;
  }
  &.nav {
    grid-template-columns: 250px calc(100vw - 250px) 0;
  }
  // calc(#{$notesWidth} - 100px);
  // grid-template-columns: 0px;
  &.large-notes {
    grid-template-columns:
      0 calc(100vw - (#{$notesWidth}))
      $notesWidth;
    .oith-navigation {
      // display: none/;
    }
    &.nav {
      grid-template-columns:
        $navWidth calc(100vw - (#{$notesWidth}) - #{$navWidth})
        $notesWidth;
    }
    &.no-nav {
    }
    .right-nav svg {
      right: calc(#{$notesWidth} + 10px);
    }
  }
  &.small-notes {
    grid-template-columns: 0 calc(100vw - #{$notesWidth} + 100px) calc(
        #{$notesWidth} - 100px
      );
    &.nav-off {
      grid-template-columns: calc(100vw - #{$notesWidth} + 100px) calc(
          #{$notesWidth} - 100px
        );
    }
    &.nav {
      grid-template-columns:
        $navWidth calc(100vw - #{$notesWidth} - #{$navWidth} + 100px)
        calc(#{$notesWidth} - 100px);
      .oith-navigation {
        display: block;
      }
    }

    .right-nav svg {
      right: calc(#{$notesWidth} - 100px + 10px);
    }
  }
}

// 48px: 48px;
@mixin mobileNav {
  &.nav {
    .oith-navigation {
      display: grid;
      position: absolute;
      top: 48px;
      left: 0;
      width: 100vw;
      grid-template-columns: 250px calc(100vw - 250px);
      .mobile-nav-close {
        height: calc(100vh - 48px);
      }
    }
  }
  .oith-navigation {
    display: none;
  }
}
.oith-main {
  height: 100vh;
  top: 0;
  left: 0;
  position: fixed;
  width: 100vw;
  display: grid;
  grid-template-rows: 0px 48px calc(100vh - 48px);
  &.with-logo {
    grid-template-rows: 48px 48px calc(100vh - 48px - 48px) !important;
  }
  .logo {
    width: 100vw;
    height: 48px;
  }
  .oith-header {
    width: 100vw;
    height: 48px;
  }
  .off-notes {
    .verse-notes {
      display: none !important;
    }
  }

  .oith-content-parent {
    @media screen and (max-width: 700px) {
      display: grid;
      grid-template-rows: calc(100vh) 0px;
      &.large-notes {
        grid-template-rows: calc(100vh - 48px - 300px) 300px;
      }
      &.small-notes {
        grid-template-rows: calc(100vh - 48px - 200px) 200px;
      }
      @include mobileNav();
      .verse-notes {
        border-top: solid;
        border-top-color: #a9b2b2;
      }
    }
    @media screen and (min-width: 700.01px) and (max-width: 991.98px) {
      display: grid;
      @include mobileNav();
      // @include oithContent(0px, 350px);
      grid-template-columns: calc(100%) 0px;
      &.large-notes {
        grid-template-columns: calc(100% - 350px) 350px;
      }
      &.small-notes {
        grid-template-columns: calc(100% - 250px) 250px;

        .right-nav svg {
          right: 250px; //calc() + 10px);
        }
      }
    }
    @media screen and (min-width: 992px) {
      display: grid;
      @include oithContent(250px, 350px);
      .oith-navigation {
        height: calc(100vh - 48px);
        background-color: #f7f8f8;
        // display: grid;
        // grid-template-columns: 250px 0;
      }
      &.nav {
        .left-nav {
          svg {
            left: 250px;
          }
        }
      }
    }
    @media screen and (min-width: 1120px) {
      display: grid;
      @include oithContent(250px, 350px);
      .oith-navigation {
        display: grid;

        grid-template-columns: 250px 0;
      }
    }
    // >=768px	Medium
    // >=992px	Large
    // >=1200px
    &.nav-off {
      .navigation {
        display: none;
      }
    }
    .oith-navigation {
      .navigation {
        background-color: #f7f8f8;
        height: calc(100vh - 48px);
      }
      height: calc(100vh - 48px);
    }
    .left-nav,
    .right-nav {
      svg {
        position: fixed;
        width: 48px;
        height: 32px;
        top: calc(100vh / 2);
        // top: calc(100% - 350px - 48px);
      }
    }
    .left-nav {
      svg {
        left: 0;
      }
    }
    .right-nav {
      svg {
        right: 0;
      }
    }
    .chapter-content {
      @include chapterContent();
    }
  }
}
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');

.right-to-left {
  .navigation-child {
    margin-left: none !important;
    margin-right: 10px;
    padding: 0;
    border-left-width: none !important;
    border-right-width: 1px;
    border-left-style: none !important;
    border-right-style: ridge;
    list-style: none;
    // grid-template-columns: auto 24px !important;
    // margin-bottom: 8px;
    // margin-left: 20px;
    // font-family: 'Open Sans' !important;
    // display: grid;
  } // direction: rtl;
}

.navigation-parent {
  .navigation-child {
    margin-left: 10px;
    padding: 0;
    border-left-width: 1px;
    border-left-style: ridge;
    list-style: none;
    // grid-template-columns: auto 24px !important;
    // margin-bottom: 8px;
    // margin-left: 20px;
    // font-family: 'Open Sans' !important;
    // display: grid;
  }
  .title {
    font-family: 'Open Sans' !important;
    padding-left: 5px;
    font-size: 1em;
    margin-bottom: 8px;
    display: block;
  }
}

.title.open {
  font-weight: 700;
}
.nav-items-holder {
  height: 100%;
  overflow-y: scroll;
}

#searchBox {
  width: 100%;
  height: 2em;
}

#library {
  width: 100%;
  height: 2em;
  display: grid;
  align-items: center;
  margin-left: 20px;
}

.oith-navigation {
  z-index: 100;
  .nav-off & {
    display: none !important;
  }
}

.media-container {
  display: flex;
  justify-content: center;
  width: 100%;
  height: auto;
  video {
    width: 70%;
  }
}

